--- a/exampleSite/data/about.yml
+++ b/exampleSite/data/about.yml
@@ -13,7 +13,7 @@ work_process:
     
   - title : "Livraison"
     icon : "images/icons/print.png"
-    content : "Intégration des composants, maquettes. Développement des templates, pages utilisable et mise en pre production pour le lancement de la mise en ligne."
+    content : "Intégration des composants, maquettes. Développement des templates, pages utilisables et mise en pre production pour le lancement de la mise en ligne."
 
 
 # team
