--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Bonjour ! <br> Je suis Maxime <br> UI Designer"
+  title : "Bonjour ! <br> Je suis Maxime <br> Web Designer"
 
 # about
 about:
