--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -5,7 +5,7 @@ banner:
 # about
 about:
   enable : true
-  content : "L'UI Designer, ce trait d'union entre l'homme et la machine. C’est l’ensemble des outils qui vont nous permettre de dialoguer avec la machine. On retrouve les éléments indispensables afin de transcrire ce que nous voulons faire, dire ou ordonner à l’ordinateur en signe qu’il pourra comprendre : souris, clavier ou encore écran en sont les éléments de base. Comprendre cela, c’est accepter une vérité universelle : la machine ne parle pas le même language que nous."
+  content : "Le webdesigne, ce trait d'union entre l'homme et la machine. C’est l’ensemble des outils qui vont nous permettre de dialoguer avec la machine. On retrouve les éléments indispensables afin de transcrire ce que nous voulons faire, dire ou ordonner à l’ordinateur en signe qu’il pourra comprendre : souris, clavier ou encore écran en sont les éléments de base. Comprendre cela, c’est accepter une vérité universelle : la machine ne parle pas le même language que nous."
   button:
     enable : true
     label : "En savoir plus"
