--- a/exampleSite/data/portfolio.yml
+++ b/exampleSite/data/portfolio.yml
@@ -1,5 +1,13 @@
 # portfolio item
 item:
+  - image : "images/portfolio/web-9.png"
+    project_url : "https://www.carbonshape.fr"
+    category: "Web Design"
+
+  - image : "images/portfolio/web-10.png"
+    project_url : "https://www.esthetecustom.com"
+    category: "Web Design"
+
   - image : "images/portfolio/ui-1.png"
     project_url : "https://www.behance.net/gallery/92079743/Redesign-home-page"
     category: "UI Design"
